--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,59 +8,13 @@ services:
     ports:
       - "5678:5678"   # puerto expuesto para acceder a n8n
     environment:
-      # Variables para EvolutionAPI local
-      SERVER_NAME: evolution
-      SERVER_TYPE: http
-      SERVER_PORT: 8080
-      SERVER_URL: http://host.docker.internal:8080  # host.docker.internal para acceder al localhost del host desde Docker
-      SERVER_DISABLE_DOCS: "false"
-      SERVER_DISABLE_MANAGER: "false"
-
-      CORS_ORIGIN: "*"
-      CORS_METHODS: "POST,GET,PUT,DELETE"
-      CORS_CREDENTIALS: "true"
-
-      DATABASE_PROVIDER: postgresql
-      DATABASE_CONNECTION_URI: postgresql://username:password@db:5432/evolution_api
-
-      DATABASE_CONNECTION_CLIENT_NAME: evolution
-      DATABASE_SAVE_DATA_INSTANCE: "true"
-      DATABASE_SAVE_DATA_NEW_MESSAGE: "true"
-      DATABASE_SAVE_MESSAGE_UPDATE: "true"
-      DATABASE_SAVE_DATA_CONTACTS: "true"
-      DATABASE_SAVE_DATA_CHATS: "true"
-      DATABASE_SAVE_DATA_HISTORIC: "true"
-      DATABASE_SAVE_DATA_LABELS: "true"
-      DATABASE_SAVE_IS_ON_WHATSAPP: "true"
-      DATABASE_SAVE_IS_ON_WHATSAPP_DAYS: 7
-      DATABASE_DELETE_MESSAGE: "false"
-
-      CACHE_REDIS_ENABLED: "true"
-      CACHE_REDIS_URI: redis://redis:6379
-      CACHE_REDIS_PREFIX_KEY: evolution-cache
-      CACHE_REDIS_TTL: 604800
-      CACHE_REDIS_SAVE_INSTANCES: "true"
-
-      CACHE_LOCAL_ENABLED: "true"
-      CACHE_LOCAL_TTL: 86400
-
-      AUTHENTICATION_API_KEY: BQYHJGJHJ
-      AUTHENTICATION_EXPOSE_IN_FETCH_INSTANCES: "false"
-
-      LOG_LEVEL: ERROR,WARN,DEBUG,INFO,LOG,VERBOSE,DARK,WEBHOOKS,WEBSOCKET
-      LOG_COLOR: "true"
-      LOG_BAILEYS: error
-
-      DEL_INSTANCE: "false"
-      DEL_TEMP_INSTANCES: "true"
-
-      LANGUAGE: pt-BR
-
-      WEBHOOK_GLOBAL_ENABLED: "false"
-      WEBSOCKET_ENABLED: "true"
-      WEBSOCKET_GLOBAL_EVENTS: "true"
-
-      TELEMETRY_ENABLED: "true"
+      - N8N_SECURE_COOKIE=false
+      - N8N_EDITOR_BASE_URL=http://45.61.157.201/n8n/
+      - N8N_PUBLIC_URL=http://45.61.157.201/n8n/
+      - WEBHOOK_URL=http://45.61.157.201/n8n/
+      - N8N_PROTOCOL=http
+      - N8N_PORT=5678
+      - N8N_PATH=/n8n/
 
       # Otros valores opcionales pueden agregarse aquí si se requieren
 
@@ -69,6 +23,9 @@ services:
       - db
     networks:
       - evolution_net
+    
+    volumes:
+      - n8n_data:/home/node/.n8n
 
   redis:
     image: redis:alpine
@@ -96,6 +53,7 @@ services:
 
 volumes:
   evolution_db_data:
+  n8n_data:
 
 networks:
   evolution_net:
