--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
       - "5678:5678"   # puerto expuesto para acceder a n8n
     environment:
       - N8N_SECURE_COOKIE=false
-      - N8N_EDITOR_BASE_URL=http://45.61.157.201/n8n/
-      - N8N_PUBLIC_URL=http://45.61.157.201/n8n/
-      - WEBHOOK_URL=http://45.61.157.201/n8n/
+      #- N8N_EDITOR_BASE_URL=http://45.61.157.201/n8n/
+      #- N8N_PUBLIC_URL=http://45.61.157.201/n8n/
+      #- WEBHOOK_URL=http://45.61.157.201/n8n/
       - N8N_PROTOCOL=http
       - N8N_PORT=5678
-      - N8N_PATH=/n8n/
+      #- N8N_PATH=/n8n/
 
       # Otros valores opcionales pueden agregarse aquí si se requieren
 
