--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
      - N8N_EDITOR_BASE_URL=http://45.61.157.201/n8n/
      - N8N_PUBLIC_URL=http://45.61.157.201/n8n/
      - WEBHOOK_URL=http://45.61.157.201/n8n/
+     - N8N_TRUSTED_PROXIES=0.0.0.0/0
+
 
       # Otros valores opcionales pueden agregarse aquí si se requieren
 
