Ajustes de variables de entorno n8n

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,10 @@ services:
      - N8N_EDITOR_BASE_URL=http://45.61.157.201/n8n/
      - N8N_PUBLIC_URL=http://45.61.157.201/n8n/
      - WEBHOOK_URL=http://45.61.157.201/n8n/
-     - N8N_TRUSTED_PROXIES=loopback,linklocal,uniquelocal
+     - N8N_TRUSTED_PROXIES=loopback,linklocal,uniquelocal,172.17.0.0/16,0.0.0.0/0
+     - NODE_OPTIONS=--trust-proxy
+
+
 
       # Otros valores opcionales pueden agregarse aquí si se requieren
 
