Ajustes de variables de entorno n8n

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,17 +8,13 @@ services:
     ports:
       - "5678:5678"   # puerto expuesto para acceder a n8n
     environment:
-     - N8N_SECURE_COOKIE=false
-     - N8N_PROTOCOL=http
-     - N8N_PORT=5678
-     - N8N_PATH=/n8n/
      - N8N_HOST=45.61.157.201
-     - N8N_EDITOR_BASE_URL=http://45.61.157.201/n8n/
-     - N8N_PUBLIC_URL=http://45.61.157.201/n8n/
-     - WEBHOOK_URL=http://45.61.157.201/n8n/
+     - N8N_PORT=5678
+     - N8N_PROTOCOL=http
+     - N8N_PUBLIC_URL=http://45.61.157.201/
+     - N8N_EDITOR_BASE_URL=http://45.61.157.201/
+     - N8N_SECURE_COOKIE=false
      - N8N_TRUSTED_PROXIES=loopback,linklocal,uniquelocal,172.17.0.0/16,0.0.0.0/0
-   
-
 
 
       # Otros valores opcionales pueden agregarse aquí si se requieren
