--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - WEBHOOK_URL=http://45.61.157.201:5678
       - N8N_SECURE_COOKIE=false
     volumes:
-      - /root/n8n_data:/home/node/.n8n
+      - n8n_data:/home/node/.n8n
 
 
   redis:
